--- a/gitbegin.html
+++ b/gitbegin.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="gitbegin.css">
 </head>
 <body>
-    <p>burger home made</p>
+    <p>Burger Home Made</p>
 </body>
 </html>
